# ArUco

./: CMakeLists.txt  LICENSE  README
src/: CMakeLists.txt  markerdetector.cpp
utils/: CMakeLists.txt  aruco_calibration.cpp  aruco_test.cpp  aruco_test_board_gl.cpp  aruco_test_board_gl_mask.cpp
utils_hrm/: CMakeLists.txt
