INCLUDE_DIRECTORIES(${PROJECT_SOURCE_DIR}/src ${GNULIBS_INCLUDE_DIR})
LINK_LIBRARIES(${PROJECT_NAME} ${REQUIRED_LIBRARIES} )

ADD_EXECUTABLE(aruco_test aruco_test.cpp)
ADD_EXECUTABLE(aruco_simple aruco_simple.cpp)
ADD_EXECUTABLE(aruco_create_marker aruco_create_marker.cpp)
ADD_EXECUTABLE(aruco_create_board aruco_create_board.cpp)
ADD_EXECUTABLE(aruco_selectoptimalmarkers aruco_selectoptimalmarkers.cpp)
ADD_EXECUTABLE(aruco_simple_board aruco_simple_board.cpp)
ADD_EXECUTABLE(aruco_test_board aruco_test_board.cpp)
ADD_EXECUTABLE(aruco_board_pix2meters aruco_board_pix2meters.cpp)
ADD_EXECUTABLE(aruco_calibration aruco_calibration.cpp)
#ADD_EXECUTABLE(aruco_test_board_stability aruco_test_board_stability.cpp)

# Postfix of EXEs:
if(WIN32)
  set(ARUCO_DEBUG_POSTFIX _d)
endif()
if(DEFINED CMAKE_DEBUG_POSTFIX)
  set(ARUCO_DEBUG_POSTFIX "${CMAKE_DEBUG_POSTFIX}")
endif()
set_target_properties(aruco_test PROPERTIES DEBUG_POSTFIX "${ARUCO_DEBUG_POSTFIX}")
set_target_properties(aruco_simple PROPERTIES DEBUG_POSTFIX "${ARUCO_DEBUG_POSTFIX}")
set_target_properties(aruco_create_marker PROPERTIES DEBUG_POSTFIX "${ARUCO_DEBUG_POSTFIX}")
set_target_properties(aruco_create_board PROPERTIES DEBUG_POSTFIX "${ARUCO_DEBUG_POSTFIX}")
set_target_properties(aruco_selectoptimalmarkers PROPERTIES DEBUG_POSTFIX "${ARUCO_DEBUG_POSTFIX}")
set_target_properties(aruco_simple_board PROPERTIES DEBUG_POSTFIX "${ARUCO_DEBUG_POSTFIX}")
set_target_properties(aruco_test_board PROPERTIES DEBUG_POSTFIX "${ARUCO_DEBUG_POSTFIX}")
set_target_properties(aruco_board_pix2meters PROPERTIES DEBUG_POSTFIX "${ARUCO_DEBUG_POSTFIX}")
set_target_properties(aruco_calibration PROPERTIES DEBUG_POSTFIX "${ARUCO_DEBUG_POSTFIX}")

if(WIN32)
  IF(GL_FOUND AND BUILD_GLSAMPLES)
    set_target_properties(aruco_test_gl PROPERTIES DEBUG_POSTFIX "${ARUCO_DEBUG_POSTFIX}")
    set_target_properties(aruco_test_board_gl PROPERTIES DEBUG_POSTFIX "${ARUCO_DEBUG_POSTFIX}")
    set_target_properties(aruco_test_board_gl_mask PROPERTIES DEBUG_POSTFIX "${ARUCO_DEBUG_POSTFIX}")
  ENDIF()
endif()

INSTALL(TARGETS aruco_test  aruco_board_pix2meters aruco_simple aruco_create_marker aruco_create_board aruco_simple_board aruco_test_board aruco_selectoptimalmarkers RUNTIME DESTINATION bin)
IF(GL_FOUND AND BUILD_GLSAMPLES)
  ADD_EXECUTABLE(aruco_test_gl aruco_test_gl.cpp)
  TARGET_LINK_LIBRARIES(aruco_test_gl ${OPENGL_LIBS})

  ADD_EXECUTABLE(aruco_test_board_gl aruco_test_board_gl.cpp)
  TARGET_LINK_LIBRARIES(aruco_test_board_gl ${OPENGL_LIBS})
  
  ADD_EXECUTABLE(aruco_test_board_gl_mask aruco_test_board_gl_mask.cpp)
  TARGET_LINK_LIBRARIES(aruco_test_board_gl_mask ${OPENGL_LIBS})  

  INSTALL(TARGETS aruco_test_gl aruco_test_board_gl aruco_test_board_gl_mask RUNTIME DESTINATION bin)
ENDIF()
